--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                <h1 class="h1"> veni a disfrutar del mejor cine de cordoba!!</h1>
                 <p class="p">Sabemos lo importante que es encontrar películas adecuadas para todas las edades y disfrutar de momentos especiales juntos. En <span class="span">Cinemacord</span>, te proporcionamos un espacio seguro y emocionante para explorar películas que todos puedan disfrutar.</p>
                 <a href="#" class="btn">registrate</a>
+                <a href="#" class="btn"> comprar entradas</a>
              </div>
 
              <div>
